--- a/indexablerecyclerview/src/main/AndroidManifest.xml
+++ b/indexablerecyclerview/src/main/AndroidManifest.xml
@@ -1,8 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="me.yokeyword.indexablerecyclerview">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-sdk
-        tools:overrideLibrary="com.github.promeg.tinypinyin.lexicons.android.cncity,com.github.promeg.tinypinyin.android.asset.lexicons"/>
-    <application/>
 </manifest>
